# d_blog

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-build.yml
admin/: .umirc.ts  bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css
admin-solidjs/: bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js
admin-solidjs/src/: index.tsx
admin/src/: app.ts
config/: config.yml
data/: demo.db
migration/: Cargo.toml
migration/src/: exception.rs  lib.rs  m20220101_000001_create_table.rs  m20240401_085218_create_exception_table.rs  m20240407_054555_create_post_table.rs  m20240407_054844_create_category_table.rs  m20240407_055151_create_post_tags_table.rs  m20240407_055250_create_tag_table.rs  m20240411_032202_create_product_table.rs  m20240411_032637_create_product_category_table.rs  m20240411_034848_create_product_sku_table.rs  m20240411_053356_create_product_sku_name_table.rs  m20240411_053401_create_product_sku_value_table.rs  m20240411_053408_create_product_sku_name_value_table.rs  m20240502_062735_create_permission_table.rs  m20240502_062809_create_role_table.rs  m20240514_061611_create_role_permission_table.rs  m20240530_024344_user_roles.rs  m20240615_073331_add_can_delete_column_to_role_table.rs
src/: app_error.rs  app_writer.rs  config.rs  db.rs  main.rs
src/dtos/: category.rs  exception.rs  mod.rs  permission.rs  permission_role.rs  post.rs  product.rs  product_category.rs  product_sku.rs  product_sku_name.rs  product_sku_name_value.rs  product_sku_value.rs  role.rs  tag.rs  user.rs  user_role.rs
src/entities/: category.rs  exception.rs  mod.rs  permission.rs  permission_role.rs  post.rs  post_tag.rs  prelude.rs  product.rs  product_category.rs  product_sku.rs  product_sku_name.rs  product_sku_name_value.rs  product_sku_value.rs  role.rs  tag.rs  user_role.rs  users.rs
src/extends/: depot.rs  mod.rs
src/middleware/: cors.rs  jwt.rs
src/routers/: category.rs  demo.rs  exception.rs  mod.rs  permission.rs  permission_role.rs  post.rs  product.rs  product_category.rs  role.rs  static_routers.rs  user.rs  user_role.rs
src/services/: category.rs  exception.rs  mod.rs  permission.rs  permission_role.rs  post.rs  product.rs  product_category.rs  product_sku.rs  product_sku_name.rs  product_sku_name_value.rs  product_sku_value.rs  role.rs  upload_file.rs  (+2 more)
(+39 files in other folders)
