[workspace]
exclude = [
    "migration"
]

[package]
name = "d_blog"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
argon2 = { version = "0.5.2", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.67.0", features = [
    "anyhow",
    "logging",
    "cors",
    "oapi",
    "jwt-auth",
    "rustls",
    "catch-panic",
    "cookie",
    "serve-static",
    "test",
    "quinn",
    "proxy",
] }
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-time",
    "with-chrono",
] }
serde = "1.0.197"
serde_yaml = "0.9.31"
thiserror = "1.0.58"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0.115"
futures = "0.3.30"


[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
