[workspace]
exclude = [
    "migration"
]

[package]
name = "d_blog"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
argon2 = { version = "0.5.3", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.5.0"
salvo = { version = "0.68.5", features = [
    "anyhow",
    "logging",
    "cors",
    "oapi",
    "jwt-auth",
    "rustls",
    "catch-panic",
    "cookie",
    "serve-static",
    "test",
    "quinn",
    "proxy",
] }
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "with-time",
    "with-chrono",
] }
serde = "1.0.204"
serde_yaml = "0.9.31"
thiserror = "1.0.62"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0.120"
futures = "0.3.30"
lazy_static = "1.5.0"


[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
